# groud_collapse

./: Dockerfile  README.md  alternative_data_preproc.py  alternative_model.py  alternative_test.py  data_preproc.py  fake_model.py  llm.py  main.py  original_model.py  original_test.py  presentation.tex  pyproject.toml  requirements.txt
input/: ground collapse.xlsx
output/: alternative_predicted_results.csv  alternative_stacked_model.pkl  fake_model_results.csv  llm_agg_results.tex  llms.csv  original_predicted_results.csv  original_stacked_model.pkl  predicted_results.xlsx  stacked_model.pkl
src/: __init__.py  alternative_data_preproc.py  alternative_model.py  alternative_test.py  data_preproc.py  fake_model.py  llm.py  llm_analysis.py  original_model.py  original_test.py
